overlays/local/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma-web
  annotations:
    kubernetes.io/ingress.class: nginx  
    cert-manager.io/issuer: letsencrypt-prod
    cert-manager.io/issuer-kind: ClusterIssuer
    nginx.ingress.kubernetes.io/auth-signin: 'https://authelia.wep4you.com'
    nginx.ingress.kubernetes.io/auth-url: 'http://authelia.authelia.svc.cluster.local:9091/api/verify' 
  namespace: uptime-kuma
  tls:
    - hosts:
        - uptime.local.wep4you.com
      secretName: tls-uptime-kuma-web-ingress
